--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/slick-theme.css">
     <link rel="stylesheet" href="css/icon.css">
-
+    <link rel="stylesheet" href="css/check.css">
 
 </head>
 <body>
@@ -55,7 +55,7 @@
         <div class="call">
             <div class="call__wrapper">
                 <form action="" class="call__form">
-                    <input type="text" name="zip" value="Enter your zip code" class="call__inp">
+                    <input type="text" name="zip" placeholder="Enter your zip code" class="call__inp">
                     <div class="photo">
                         <div class="photo__top">
                             <img class="photo__img" src="img/sm-4.png" alt=""><img
@@ -83,25 +83,82 @@
 
 
 <main class="main">
-    <section class="carousel">
-        sdvsdv
+    <section class="slider-carousel">
+        <div class="carousel js-script-carousel">
+            <div class="slide">
+                <div class="doc">
+                    <div class="doc__img"><img src="img/doc.png" alt="doc"></div>
+                    <div class="doc__descr">
+                        <h3>Documents</h3>
+                        <p class="slide__txt">This is Photoshop's version of Lorem ipsum. Proin gravida nibh
+                            vel velit auctor aliquet. Aenean sollicitudin</p>
+                    </div>
+                </div>
+                <div class="photos">
+                    <div class="photos__img"><img src="../img/camera.png" alt="cam"></div>
+                    <div class="photos__descr">
+                        <h3>Photos</h3>
+                        <p class="slide__txt">This is Photoshop's version of Lorem ipsum. Proin gravida nibh
+                            vel velit auctor aliquet. Aenean sollicitudin</p>
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="doc">
+                    <div class="doc__img"><img src="img/doc.png" alt="doc"></div>
+                    <div class="doc__descr">
+                        <h3>Documents</h3>
+                        <p class="slide__txt">This is Photoshop's version of Lorem ipsum. Proin gravida nibh
+                            vel velit auctor aliquet. Aenean sollicitudin</p>
+                    </div>
+                </div>
+                <div class="photos">
+                    <div class="photos__img"><img src="../img/camera.png" alt="cam"></div>
+                    <div class="photos__descr">
+                        <h3>Photos</h3>
+                        <p class="slide__txt">This is Photoshop's version of Lorem ipsum. Proin gravida nibh
+                            vel velit auctor aliquet. Aenean sollicitudin</p>
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <div class="doc">
+                    <div class="doc__img"><img src="img/doc.png" alt="doc"></div>
+                    <div class="doc__descr">
+                        <h3>Documents</h3>
+                        <p class="slide__txt">This is Photoshop's version of Lorem ipsum. Proin gravida nibh
+                            vel velit auctor aliquet. Aenean sollicitudin</p>
+                    </div>
+                </div>
+                <div class="photos">
+                    <div class="photos__img"><img src="../img/camera.png" alt="cam"></div>
+                    <div class="photos__descr">
+                        <h3>Photos</h3>
+                        <p class="slide__txt">This is Photoshop's version of Lorem ipsum. Proin gravida nibh
+                            vel velit auctor aliquet. Aenean sollicitudin</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <section class="light-green">
         <div class="container">
 
-            <div class="js-script-shadow device">
-                <i class="icon-tab"></i>
+            <!--<div class="js-script-shadow device">-->
+            <div class="device-tablet">
+                <!--<i class="icon-tab"></i>-->
+                <img src="img/twoTablet.png" alt="tablet">
             </div>
             <div class="content">
 
-                <h2 class="content__title">This is a Heading</h2>
-                <p class="content__txt">This is Photoshop's version of Lorem ipsum.
+                <h2>This is a Heading</h2>
+                <p>This is Photoshop's version of Lorem ipsum.
                     Proin gravida nibh vel velit auctor aliquet.
                     Aenean sol-licitudin, lorem quis bibendum auctor,
                     nisi elit consequat ipsum, nec sagittis sem nibh
                     id elit. Duis sed odio sit amet nibh vulputate
                     cursus a sit amet mauris</p>
-                <p class="content__txt">
+                <p>
                     Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.
                     Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu
                     ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna
@@ -113,47 +170,60 @@
             </div>
         </div>
     </section>
-
     <section class="dark-green">
         <div class="triangel"></div>
         <div class="container">
-            <div class="js-script-shadow device device--laptop ">
-                <i class="icon-laptop"></i>
+            <!--<div class="js-script-shadow device device&#45;&#45;laptop ">-->
+            <div class="device-laptop ">
+                <img src="img/laptop.png" alt="pic">
             </div>
-            <div class="content">
-                <h2 class="content__title">This is a Heading</h2>
-                <p class="content__txt">
+            <div class="content-btn">
+                <h2 class="content-btn--left">This is a Heading</h2>
+                <p class="content-btn--txt">
                     Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.
                     Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu
-                    ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna
+                    ad litora torquent per conubia nostra, per inceptos himenae-os. Mauris in erat justo. Nullam ac urna
                     eu felis dapibus
                     condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin
                     condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris
                     egestas quam, ut aliquam massa nisl quis neque. Suspendisse in orci enim.
                 </p>
+                <div class="content-btn__wrapper">
+                    <a href="#" class="btn">Download</a>
+                </div>
             </div>
         </div>
     </section>
-
-
 </main><!-- MAIN CONTENT [END] -->
 
-	</div><!-- FOOTER FIX [END] -->
+<!-- FOOTER -->
+<footer class="footer">
+    <div class="wrapper-map">
+        <div id="map"></div>
+    </div>
+    <div class="circle-form">
+        <form action="#" method="post" class="circle js-script-form">
+            <input type="text" class="circle__inp" name="name" placeholder="Name">
+            <input type="text" class="circle__inp" name="email" placeholder="email address">
+            <textarea name="message" placeholder="Message" id="message" class="circle__area"></textarea>
+            <i id="check" class="icon-ok-circled circle__sub"></i>
+        </form>
+    </div>
+    <div class="copy">
+        <div class="container">
+            <p class="copy__text">&#169; Copyright 2013 Css Author, All Rights Reserved.</p>
+        </div>
+    </div>
+</footer><!-- FOOTER END -->
 
-	<!-- FOOTER -->
-	<footer class="footer">
-		<div class="container">
+<!-- Scripts load -->
 
-		</div>
-	</footer><!-- FOOTER END -->
+<script src="js/jquery-3.2.1.min.js"></script>
+<script src="js/slick.js"></script>
+<script src="js/jquery.flatshadow.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJLvdLynWS2LCKhWdJVDHGDpneno-Poxc"></script>
+<script src="js/script.js"></script>
 
-	<!-- Scripts load -->
-
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/slick.js"></script>
-	<script src="js/jquery.flatshadow.js"></script>
-	<script src="js/script.js"></script>
-
-	</body>
+</body>
 </html>
  
