--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <!-- HEADER -->
     <header class="header">
         <div class="slider js-script-slider">
-            <div><img class="slider__img" src="../../img/slide.png" alt="IMG"></div>
-            <div><img class="slider__img" src="../../img/slide.png" alt="IMG"></div>
-            <div><img class="slider__img" src="../../img/slide.png" alt="IMG"></div>
+            <div><img class="slider__img" src="../img/slide.png" alt="IMG"></div>
+            <div><img class="slider__img" src="../img/slide.png" alt="IMG"></div>
+            <div><img class="slider__img" src="../img/slide.png" alt="IMG"></div>
         </div>
         <div class="logo">
             <div class="container">
