--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="og:phone_number" content="+380">
     <meta name="fb:page_id" content="">
 
-    <title>ProjecName</title>
+    <title>WG</title>
 
     <!--[if IE]>
     <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
@@ -40,9 +40,9 @@
     <!-- HEADER -->
     <header class="header">
         <div class="slider js-script-slider">
-            <div><img class="slider__img" src="../img/slide.png" alt="IMG"></div>
-            <div><img class="slider__img" src="../img/slide.png" alt="IMG"></div>
-            <div><img class="slider__img" src="../img/slide.png" alt="IMG"></div>
+            <div><img class="slider__img" src="img/slide.png" alt="IMG"></div>
+            <div><img class="slider__img" src="img/slide.png" alt="IMG"></div>
+            <div><img class="slider__img" src="img/slide.png" alt="IMG"></div>
         </div>
         <div class="logo">
             <div class="container">
