second last change

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </div>
                 </div>
                 <div class="photos">
-                    <div class="photos__img"><img class="doc__pic" src="../img/camera.png" alt="cam"></div>
+                    <div class="photos__img"><img class="doc__pic" src="img/camera.png" alt="cam"></div>
                     <div class="photos__descr">
                         <h3>Photos</h3>
                         <p class="slide__txt">This is Photoshop's version of Lorem ipsum. Proin gravida nibh
@@ -114,7 +114,7 @@
                     </div>
                 </div>
                 <div class="photos">
-                    <div class="photos__img"><img class="doc__pic" src="../img/camera.png" alt="cam"></div>
+                    <div class="photos__img"><img class="doc__pic" src="img/camera.png" alt="cam"></div>
                     <div class="photos__descr">
                         <h3>Photos</h3>
                         <p class="slide__txt">This is Photoshop's version of Lorem ipsum. Proin gravida nibh
@@ -132,7 +132,7 @@
                     </div>
                 </div>
                 <div class="photos">
-                    <div class="photos__img"><img class="doc__pic" src="../img/camera.png" alt="cam"></div>
+                    <div class="photos__img"><img class="doc__pic" src="img/camera.png" alt="cam"></div>
                     <div class="photos__descr">
                         <h3>Photos</h3>
                         <p class="slide__txt">This is Photoshop's version of Lorem ipsum. Proin gravida nibh
