--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 
 
 <main class="main">
+
     <section class="slider-carousel">
         <div class="carousel js-script-carousel">
             <div class="slide">
@@ -142,6 +143,7 @@
             </div>
         </div>
     </section>
+
     <section class="light-green">
         <div class="container">
 
@@ -170,11 +172,10 @@
                 </p>
             </div>
         </div>
+
     </section>
     <section class="dark-green">
-        <div class="triangel"></div>
-        <div class="container">
-            <!--<div class="js-script-shadow device device&#45;&#45;laptop ">-->
+        <div class="dark-green__content container">
             <div class="device-laptop ">
                 <img class="device-laptop__img" src="img/laptop.png" alt="pic">
             </div>
